bin=[
  {name="my_language",path="test/my_language.rs"},
  {name="egg",path="test/egg.rs"},
]
[package]
name = "Egg"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3  # 优化级别，0到3，数字越大优化越多
debug = false  # 是否包含调试信息
lto = true    # 是否启用链接时间优化
panic = 'unwind'  # panic 处理方式，可以是 'unwind' 或 'abort'

[dependencies]
egg = "0.9.5"
lexpr = "0.2.7"

